[package]
name = "rustxy"
description = "The Rust Reverse Proxy"
version = "0.1.1"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/JeanVydes/rustxy"
keywords = ["rustxy", "proxy", "reverse", "network"]

[dependencies]
chrono = "0.4.38"
http = "1.1.0"
http-body-util = "0.1.2"
httparse = "1.9.4"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.118"
threadpool = "1.8.1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.11"
uuid = { version = "1.9.1", features = ["v7", "v4", "fast-rng"] }
